Add mobile splash and development phone login
